Fixed intro on iOS(maybe)

--- a/css/style.css
+++ b/css/style.css
@@ -525,15 +525,6 @@ body {
   overflow-x: hidden;
   overflow-y: hidden;
   width: 100%; }
-  @media screen and (max-width: 500px) {
-    .timeline {
-      padding-top: 45em; } }
-  @media screen and (max-width: 700px) and (orientation: landscape) {
-    .timeline {
-      padding-top: 45em; } }
-  @media screen and (max-width: 400) {
-    .timeline {
-      padding-top: 40em; } }
   .timeline__intro {
     position: relative;
     cursor: default; }
@@ -553,6 +544,15 @@ body {
         left: 2.9rem; } }
   .timeline div ul {
     padding: 50px 0; }
+  @media screen and (max-width: 500px) {
+    .timeline {
+      padding-top: 45em; } }
+  @media screen and (max-width: 700px) and (orientation: landscape) {
+    .timeline {
+      padding-top: 45em; } }
+  @media screen and (max-width: 400) {
+    .timeline {
+      padding-top: 40em; } }
 
 .list-element {
   list-style: none;
@@ -718,7 +718,7 @@ body {
 .loading {
   font-family: 'Amatic SC', cursive;
   display: inline-block;
-  position: absolute;
+  position: fixed;
   width: 100vw;
   height: 100vh;
   z-index: 100000000;
