--- a/sass/pages/_intro.scss
+++ b/sass/pages/_intro.scss
@@ -13,7 +13,7 @@
 .loading {
     font-family: 'Amatic SC', cursive;
     display: inline-block;
-    position: absolute;
+    position: fixed;
     width: 100vw;
     height: 100vh;
     z-index: 100000000;
